# fr_lcdcontrol

./: CMakeLists.txt  README.md
rtl/: CMakeLists.txt
rtl/design/: dec_counter.v  lcd_control.v
rtl/testbench/: tb_top.v
sim/src/: CMakeLists.txt
sim/tests/: CMakeLists.txt
